--- a/examples/arithmetics/package.json
+++ b/examples/arithmetics/package.json
@@ -25,6 +25,14 @@
     "activationEvents": [
         "onLanguage:arithmetics"
     ],
+    "files": [
+        "bin",
+        "out",
+        "src"
+    ],
+    "bin": {
+        "cli": "./bin/cli.js"
+    },
     "main": "./out/extension.js",
     "langium": {
         "languageId": "arithmetics",
@@ -49,10 +57,12 @@
         "vscode-languageserver": "^7.0.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.170",
         "@types/node": "^14.17.3",
         "@types/vscode": "^1.56.0",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
+        "colors": "^1.4.0",
         "copyfiles": "^2.4.1",
         "eslint": "^7.19.0",
         "langium-cli": "0.1.0",
